deployments/00-pod.yaml
# A Pod (as in a pod of whales or pea pod) is a group of one or more containers, with shared storage and network resources, and a specification for how to run the containers. A Pod's contents are always co-located and co-scheduled, and run in a shared context.
# kubectl apply -f deployments/00-pod.yaml
# kubectl delete -f deployments/00-pod.yaml
# kubectl port-forward pod/techmunch 8888
apiVersion: v1
kind: Pod
metadata:
  name: techmunch
  labels:
    app: techmunch
spec:
  securityContext:
    runAsUser: 0
    runAsGroup: 0
    fsGroup: 0
  containers:
    - name: techmunch
      image: sjnarmstrong/techmunch-sholto:20210717
      imagePullPolicy: Always
      ports:
        - containerPort: 8888
          protocol: TCP
          name: http
      resources:
        requests:
          memory: "500Mi"
          cpu: "1000m"
        limits:
          memory: "500Mi"
          cpu: "1000m"
